All tests are green now

--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -6,6 +6,6 @@ one:
   contact_email: MyString
 
 two:
-  id: 1
-  title: MyString
-  contact_email: MyString
+  id: 2
+  title: MyString2
+  contact_email: MyString2
